# greenlet

./: .clang-format  .gitignore  .hgignore  .hgsvnexternals  .hgtags  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.rst  LICENSE  MANIFEST.in  NEWS  README  README.rst  README.txt  appveyor.yml  build_test_ext.py  conftest.py  dev-requirements.txt  greenlet.c  greenlet.h  make-manifest  make-manifest.py  make-manylinux  make-win-release  my_build_ext.py  pyproject.toml  run-tests.py  run_vs2010_x64.cmd  setup.cfg  setup.py  setup_switch_x64_masm.cmd  slp_platformselect.h  test_gc.py  test_generator.py  test_generator_nested.py  test_greenlet.py  test_remote.py  test_weakref.py  (+2 more)
.github/workflows/: tests.yml
appveyor/: run_pip.py
benchmarks/: chain.py
doc/: Makefile  conf.py  greenlet.txt  index.txt
docs/: api.rst  c_api.rst  caveats.rst  conf.py  contextvars.rst  creating_executing_greenlets.rst  development.rst  greenlet.rst  greenlet_gc.rst  gui_example.rst  history.rst  index.rst  make.bat  python_threads.rst  switching.rst  tracing.rst
platform/: switch_aarch64_gcc.h  switch_amd64_unix.h  switch_arm32_gcc.h  switch_m68k_gcc.h  switch_mips_unix.h  switch_ppc64_aix.h  switch_ppc64_linux.h  switch_ppc_aix.h  switch_ppc_linux.h  switch_s390_unix.h  switch_sparc_sun_gcc.h  switch_x32_unix.h  switch_x64_msvc.h  switch_x86_msvc.h  switch_x86_unix.h
src/greenlet/: CObjects.cpp  PyGreenlet.cpp  PyGreenlet.hpp  PyGreenletUnswitchable.cpp  PyModule.cpp  TGreenlet.cpp  TGreenlet.hpp  TGreenletGlobals.cpp  TMainGreenlet.cpp  TPythonState.cpp  TStackState.cpp  TThreadState.hpp  TThreadStateDestroy.cpp  __init__.py  (+17 more)
tests/: __init__.py  _test_extension.c  _test_extension_cpp.cpp  test_contextvars.py  test_cpp.py  test_extension_interface.py  test_gc.py  test_generator.py  test_generator_nested.py  test_greenlet.py  test_leaks.py  test_throw.py  test_version.py  test_weakref.py
(+24 files in other folders)
